# mavlink_bridge

./: CMakeLists.txt  cmd  temp
include/: bridge.h  console_handler.h  vla_handler.h
src/: bridge.cpp  console_handler.cpp  main.cpp  vla_handler.cpp
